; ModuleID = '/home/carl/AnghaBench/systemd/src/test/extr_test-process-util.c_test_rename_process_one.c'
source_filename = "/home/carl/AnghaBench/systemd/src/test/extr_test-process-util.c_test_rename_process_one.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i64 }

@EXIT_SUCCESS = common dso_local global i64 0, align 8
@CLD_EXITED = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @test_rename_process_one to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_rename_process_one(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__, align 8
  %6 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = call i64 (...) @fork()
  store i64 %7, i64* %6, align 8
  %8 = load i64, i64* %6, align 8
  %9 = icmp sge i64 %8, 0
  %10 = zext i1 %9 to i32
  %11 = call i32 @assert_se(i32 %10)
  %12 = load i64, i64* %6, align 8
  %13 = icmp eq i64 %12, 0
  br i1 %13, label %14, label %20

14:                                               ; preds = %2
  %15 = load i8*, i8** %3, align 8
  %16 = load i32, i32* %4, align 4
  %17 = call i32 @test_rename_process_now(i8* %15, i32 %16)
  %18 = load i64, i64* @EXIT_SUCCESS, align 8
  %19 = call i32 @_exit(i64 %18) #3
  unreachable

20:                                               ; preds = %2
  %21 = load i64, i64* %6, align 8
  %22 = call i64 @wait_for_terminate(i64 %21, %struct.TYPE_3__* %5)
  %23 = icmp sge i64 %22, 0
  %24 = zext i1 %23 to i32
  %25 = call i32 @assert_se(i32 %24)
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = load i64, i64* @CLD_EXITED, align 8
  %29 = icmp eq i64 %27, %28
  %30 = zext i1 %29 to i32
  %31 = call i32 @assert_se(i32 %30)
  %32 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 1
  %33 = load i64, i64* %32, align 8
  %34 = load i64, i64* @EXIT_SUCCESS, align 8
  %35 = icmp eq i64 %33, %34
  %36 = zext i1 %35 to i32
  %37 = call i32 @assert_se(i32 %36)
  ret void
}

declare dso_local i64 @fork(...) #1

declare dso_local i32 @assert_se(i32) #1

declare dso_local i32 @test_rename_process_now(i8*, i32) #1

; Function Attrs: noreturn
declare dso_local i32 @_exit(i64) #2

declare dso_local i64 @wait_for_terminate(i64, %struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
